// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 18px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.25;
}

<div>
  <h3
    className="c0"
  >
    3
    . 
    Payment
  </h3>
  
  SelectableList({"name":"paymentMethodList","options":"[Object]","value":"stripe_card"})
  StripePaymentInput({})
  <h3
    className="c0"
  >
    Billing Address
  </h3>
  AddressChoice({})
</div>
`;

exports[`snapshot with a partial payment 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 18px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.25;
}

<div>
  <h3
    className="c0"
  >
    3
    . 
    Payment
  </h3>
  
  InlineAlert({"alertType":"success","message":"IOU from Fats Domino - $15.00","title":"Partial Payments"})
  SelectableList({"name":"paymentMethodList","options":"[Object]","value":"stripe_card"})
  StripePaymentInput({})
  <h3
    className="c0"
  >
    Billing Address
  </h3>
  AddressChoice({})
</div>
`;

exports[`snapshot with an alert 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 18px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.25;
}

<div>
  <h3
    className="c0"
  >
    3
    . 
    Payment
  </h3>
  InlineAlert({"alertType":"error","title":"The payment information you entered may be incorrect.","message":"Please review our error."})
  SelectableList({"name":"paymentMethodList","options":"[Object]","value":"stripe_card"})
  StripePaymentInput({})
  <h3
    className="c0"
  >
    Billing Address
  </h3>
  AddressChoice({})
</div>
`;
